Fix div spacing bug

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -136,11 +136,10 @@ header button img {
 }
 
 #editor div {
-    min-height: 1.4em;
+    min-height: 1.7em;
     position: relative;
     white-space: pre-wrap;
-    line-height: 1.4em;
-    padding: 0.3em;
+    line-height: 1.7em;
 }
 
 /* --- Footer --- */
